--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,19 @@
     <meta charset="utf-8">
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
-    <!-- <script src="./data/injuries/injuries.js"></script> -->
-    <!-- <script src="./data/pokemon/pokemon.js"></script> -->
-    <!-- <script src="./data/steam/steam.js"></script> -->
-    <!-- <script src="./data/worldbank/worldbank.js"></script> -->
-    <!-- <script src="./data/lol/lol.js"></script> -->
-    <script src="data.js"></script>
+
+    <section class="top">
+      <img class="imgTop" src="img/Pokeball.PNG" alt="logo">
+      <img class="imgPokemon" src="img/logo.png" alt="logo">
+      <h3 class="title">.Data</h3>
+    </section>
+
+  
+    <script src="./data/pokemon/pokemon.js"></script>  
     <script src="main.js"></script>
   </body>
 </html>
