--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,16 @@
       <img class="imgTop" src="img/Pokeball.PNG" alt="logo">
       <img class="imgPokemon" src="img/logo.png" alt="logo">
       <h3 class="title">.Data</h3>
+      <nav class="drop">
+        <button class="dropmenu">MENU</button> 
+        <div class="dropmenu-content">
+          <a href="#">Tipo</a>
+          <a href="#">Peso</a>
+          <a href="#">Altura</a>
+        </div>
+      </nav>  
     </section>
-
+    
   
     <script src="./data/pokemon/pokemon.js"></script>  
     <script src="main.js"></script>
