--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
@@ -13,6 +13,10 @@
       <img class="imgTop" src="img/Pokeball.PNG" alt="logo">
       <img class="imgPokemon" src="img/logo.png" alt="logo">
       <h3 class="title">.Data</h3>
+    </section>
+
+    <section class="showPokemons">
+      <div id="showPokemons"></div>
     </section>
 
   
