exibir dados dos pokemons

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
   </head>
   <body>
-    <div id="root"></div>
-
+    
     <section class="top">
       <img class="imgTop" src="img/Pokeball.PNG" alt="logo">
       <img class="imgPokemon" src="img/logo.png" alt="logo">
@@ -20,9 +19,9 @@
           <a href="#">Peso</a>
           <a href="#">Altura</a>
         </div>
+        <div id="exibir">exibir</div>
       </nav>  
-    </section>
-    
+    </section>    
   
     <script src="./data/pokemon/pokemon.js"></script>  
     <script src="main.js"></script>
