--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,10 @@
       </nav>  
     </section>
 
+    <section id="pokeShow">
+
+    </section>
+
     <script src="./data/pokemon/pokemon.js"></script>  
     <script src="main.js"></script>
   </body>
