alinhamento das imgs para baixo do topo

--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,20 @@
       <img class="imgTop" src="img/Pokeball.PNG" alt="logo">
       <img class="imgPokemon" src="img/logo.png" alt="logo">
       <h3 class="title">.Data</h3>
-      <nav class="drop">
+    </section>
+    <nav class="drop">
         <button class="dropmenu">MENU</button> 
         <div class="dropmenu-content">
           <a href="#">Tipo</a>
           <a href="#">Peso</a>
           <a href="#">Altura</a>
         </div>
-        <div id="exibir">exibir</div>
-      </nav>  
+      </nav>
+      <section id="poke-list" class="poke-list">
+        <div id="display" class="display"></div>
+      </section>
+        
+        
     <script src="./data/pokemon/pokemon.js"></script>  
     <script src="main.js"></script>
   </body>
