funçao filtro dos tipos dos pokemons funcionando

--- a/src/index.html
+++ b/src/index.html
@@ -13,15 +13,33 @@
       <h3 class="title">.Data</h3>
     </section>
     <nav class="drop">
-        <button class="dropmenu">MENU</button> 
+        <button class="dropmenu">Tipo</button> 
         <div class="dropmenu-content">
-          <a href="#">Tipo</a>
-          <a href="#">Peso</a>
-          <a href="#">Altura</a>
+          <a href="#">Fire</a>
+          <a href="#">water</a>
+          <a href="#">Poison</a>
         </div>
       </nav>
       <section id="poke-list" class="poke-list">
         <div id="display" class="display"></div>
+      </section>
+
+      <section id="types">
+        <button id="btn-fire">Fire</button>
+        <button id="btn-grass">Grass</button>
+        <button id="btn-poison">Poison</button>
+        <button id="btn-ice">Ice</button>
+        <button id="btn-flying">Flying</button>
+        <button id="btn-psychic">Psychic</button>
+        <button id="btn-water">Water</button>
+        <button id="btn-rock">Rock</button>
+        <button id="btn-ground">Ground</button>
+        <button id="btn-electric">Electric</button>
+        <button id="btn-bug">Bug</button>
+        <button id="btn-normal">Normal</button>
+        <button id="btn-fighting">Fighting</button>
+        <button id="btn-dragon">Dragon</button>
+        <button id="btn-ghost">Ghost</button>
       </section>
         
         
