exibição da media arrumada

--- a/src/index.html
+++ b/src/index.html
@@ -41,13 +41,15 @@
       <option id="za" value="Z-A">Z-A</option>
     </select>
 
-    <select id="media" value="media" >
-      <option id="sel">Altura</option>
-      <option id="altura" value="altura">Altura</option>
+    <select id="calculo" value="calculo">
+      <option id="selecione" value="selecione" selected="selected">Selecione</option>
+      <option id="media" value="mediaAltura">Media de altura</option>
+      <option id="menor" value="menor">Menor altura</option>
+      <option id="maior" value="maior">Maior altura</option>
     </select>
-  </section>
+    <div id="averageHeight" class="averageHeight"></div>
   
-  <section class="pokemons">
+  <section id="pokemons" class="pokemons">
     <ul id="pokemon-list" class="pokemon-list">
 
     </ul>
