--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Data Lovers</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./src/style.css" />
 </head>
 <header class="top">
-  <img class="pokeball" src="img/Pokeball.PNG" alt="pokeball">
-  <img class="pokemon-logo" src="img/logo.png" alt="logo pokemon">
+  <img class="pokeball" src="./src/img/Pokeball.PNG" alt="pokeball">
+  <img class="pokemon-logo" src="./src/img/logo.png" alt="logo pokemon">
   <h3 class="title">.Data</h3>
 </header>
 
@@ -61,8 +61,8 @@
       <ul id="pokemon-list" class="pokemon-list"></ul>
     </section>
 
-    <script src="./data/pokemon/pokemon.js"></script>
-    <script src="main.js"></script>
+    <script src="./src/data/pokemon/pokemon.js"></script>
+    <script src="./src/main.js"></script>
 </body>
 
 </html>
