exibição calculo arrumada

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <select id="calculoPeso" value="calculoPeso">
       <option id="selecione" value="selecione" selected="selected">Peso</option>
       <option id="mediaPeso" value="mediaPeso">Media de peso</option>
-      <option id="menorPeso" value="menorPeso">Menor peso</option>
-      <option id="maiorPeso" value="maiorPeso">Maior peso</option>
+      <option id="menorPeso" value="menor">Menor peso</option>
+      <option id="maiorPeso" value="maior">Maior peso</option>
     </select>
   </section>
   <div class="calculation">
